Fixing the nav for enough contrast between foreground and background.  https://webaim.org/resources/contrastchecker/

--- a/dev/legacy-scss/variables.scss
+++ b/dev/legacy-scss/variables.scss
@@ -16,16 +16,16 @@ $breadcrumb-separator:          "/" !default; // now missing from bootstrap
 
 $text-link-color: rgb(176, 189, 202); // muted blue #B0BDCA
 
-$text-link-over-beige: rgb(0, 86, 149); // #005695 blue link over beige backgrounds
+$text-link-over-beige: rgb(0, 57, 97); // #003961 blue link over beige backgrounds
 
 $design-primary-color: rgb(0, 119, 138); // Teal Blue #00778b
 $design-primary-gradient-top: rgb(6, 80, 89); // Lighter Teal Blue #168b99 was #17A2AC
 $design-primary-gradient-bottom: rgb(1, 64, 71); // Slightly darker Teal Blue #056a7b
 
 // Brown colors
-$design-secondary-gradient-top: rgb(198, 176, 130); // #C6B082  Used for subnav
-$design-secondary-color: rgb(180, 151, 90); // Metallic Gold  #B4975A
-$design-secondary-lighter: rgb(199, 177, 131); // #C7B183   Used for table headers
+$design-secondary-gradient-top: rgb(213, 197, 165); // #D5C5A5
+$design-secondary-color: rgb(208, 190, 149); // #D0BE95
+$design-secondary-lighter: rgb(214, 200, 164); // #D6C8A4
 
 $design-secondary-footer-newsfeed: rgb(221, 208, 181); // #DDD0B5
 $design-secondary-footer-icon-bg: rgb(229, 219, 197); // #E5DBC5
